ChangeLog for dmalloc
2020-11-29 - v0.6
	* unit testing and bug fixes on wrappers
	(cd src && make -f Makefile.unit_test_wrappers && ./ut-wrap)
2020-11-28 - v0.5
	* unit testing and bug fixes on logs and stats
	(cd src && make -f Makefile.unit_test_logs && ./ut-logs)
	(cd src && make -f Makefile.unit_test_stats && ./ut-stats)
2020-11-27 - v0.4
	* statistics working and debugged (cd src && make -f Makefile.unit && ./unit)
2020-11-24 - v0.3
	* compiles and runs (and crashes) on Linux and OS X
	* tracking functionality in place.
	* still needs logging
	* under git control
2020-11-22 - v0.2
	* wrappers running and callable  as dmalloc, dfree .....
	- hang issue on nameing as malloc, free ...
	*__attribute__((constructor)) not running reliably before first call
	- call init() explicitly
2020-11-21 - v0.1
	* examples
	- cat - shared lib to replace read()
	- fishing - shared lib to replace read() then call through to original