@@ -6,6 +6,7 @@ extern void * libc_calloc_wrapper(size_t, size_t);
 extern void libc_free_wrapper(void *);
 extern void * libc_malloc_wrapper(size_t);
 extern void * libc_realloc_wrapper(void *, size_t);
+extern void * libc_reallocf_wrapper(void *, size_t);
 extern int libc_wrappers_initialized();
 #endif
 
@@ -14,6 +15,7 @@ extern int libc_wrappers_initialized();
 #define libc_free_wrapper		free
 #define libc_malloc_wrapper		malloc
 #define libc_realloc_wrapper		realloc
+#define libc_reallocf_wrapper		reallocf
 
 static inline int libc_wrappers_initialized() { return 1; }
 #endif
