@@ -13,15 +13,17 @@ typedef void * (*calloc_t)(size_t, size_t);
 typedef void   (*free_t)(void *);
 typedef void * (*malloc_t)(size_t);
 typedef void * (*realloc_t)(void *, size_t);
+typedef void * (*reallocf_t)(void *, size_t);
 
-static calloc_t	 libc_callocp = NULL;
-static free_t	 libc_freep = NULL;
-static malloc_t	 libc_mallocp = NULL;
-static realloc_t libc_reallocp = NULL;
+static calloc_t	  libc_callocp = NULL;
+static free_t	  libc_freep = NULL;
+static malloc_t	  libc_mallocp = NULL;
+static realloc_t  libc_reallocp = NULL;
+static reallocf_t libc_reallocfp = NULL;
 
 /* my_malloc() - simple memory for early allocations from dlym(),
    before we have resolved libc routines */
-#define DMALLOC_PREINIT_ROWS 4
+#define DMALLOC_PREINIT_ROWS 10
 #define DMALLOC_PREINIT_SIZE 2048
 static uint8_t dmalloc_preinit_buffer[DMALLOC_PREINIT_ROWS][DMALLOC_PREINIT_SIZE];
 static uint8_t dmalloc_row = 0;
@@ -47,9 +49,10 @@ void __attribute__ ((constructor)) libc_wrapper_init(void)
   libc_callocp = (calloc_t)dlsym(RTLD_NEXT, "calloc");
   libc_freep = (free_t)dlsym(RTLD_NEXT, "free");
   libc_mallocp = (malloc_t)dlsym(RTLD_NEXT, "malloc");
+  libc_reallocfp = (realloc_t)dlsym(RTLD_NEXT, "reallocf");
   libc_reallocp = (realloc_t)dlsym(RTLD_NEXT, "realloc");
-  dmalloc_printf("c %p, f %p, m %p r %p\n", libc_callocp, libc_freep, libc_mallocp, libc_reallocp);
-  dputc('<', stderr);
+  //  dmalloc_printf("c %p, f %p, m %p r %p\n", libc_callocp, libc_freep, libc_mallocp, libc_reallocp);
+  dputc('!', stderr);
 }
 
 int libc_wrappers_initialized()
@@ -108,9 +111,25 @@ void * libc_realloc_wrapper(void *ptr, size_t size)
   void *p = NULL;
 
   dputc('R', stderr);
-  if (libc_reallocp)
+  if (libc_reallocp) {
+    dputc('>', stderr);
     p = libc_reallocp(ptr, size);
-  else
+  } else {
     dputc('?', stderr);
+  }
+  return p;
+}
+
+void * libc_reallocf_wrapper(void *ptr, size_t size)
+{
+  void *p = NULL;
+
+  dputc('S', stderr);
+  if (libc_reallocp) {
+    dputc('>', stderr);
+    p = libc_reallocfp(ptr, size);
+  } else {
+    dputc('?', stderr);
+  }
   return p;
 }
